# Math

./: Arithmetics.sln  Arithmetics.vcxproj  Arithmetics.vcxproj.filters  BigFloat.h  BigInt.cpp  BigInt.h  BigNumArithmetic.h  BigUint.cpp  BigUint.h  CMakeLists.txt  CMakePresets.json  Common.h  Int128.cpp  Int128.h  NumericArray.cpp  NumericArray.h  Tensor.h  VectorArithmetic.h  main.cpp
BigNum/: BigFloat.cpp  BigFloat.h  BigFloatArithmetic.h  BigInt.cpp  BigInt.h  BigNumArithmetic.h  BigUint.cpp  BigUint.h  Math.h
bigIntFunctions/: bigIntDiv.h  bigIntMult.h
cmake/: MathConfig.cmake.in
deprecated/: BigFloat.cpp  BigFloat.h  BigInt.h  BigInt1.h  BigInt2.h  BigInt3.h  MagnitudeSpan.cpp  MagnitudeSpan.h  Tensor.h
include/BigNum/: BigFloat.h  BigFloatArithmetic.h  BigInt.h  BigNumArithmetic.h  BigUint.h  Math.h
include/LinearAlgebra/: ArrayBase.h  Matrix.h  SpanBase.h
include/Math/: Math.h
include/Math/BigNum/: BigFloat.h  BigFloatArithmetic.h  BigInt.h  BigNumArithmetic.h  BigUint.h  StaticBigNumArithmetic.h  StaticBigUint.h
include/Math/BigNum/BigIntFunctions/: bigIntAddAndSub.h  bigIntComparison.h  bigIntMult.h
include/Math/Tensors/: MiscTensorFunctions.h  TensorBase.h  TensorBinaryOps.h  TensorFunctions.h  TensorUnaryOps.h  Tensors.h  Transform.h
include/Math/Utility/: ArrayBase.h  SpanBase.h
install/: ArithmeticsConfig.cmake.in
src/BigNum/: BigFloat.cpp  BigInt.cpp  BigUint.cpp
src/Math/BigNum/: BigFloat.cpp  BigInt.cpp  BigUint.cpp
tests/: main.cpp
